--- a/Lingo.html
+++ b/Lingo.html
@@ -7,8 +7,8 @@
 </head>
 <body>
    <script src="lingo-nl.js"></script>
-   <div>
-      <form class="form" onsubmit="return false;">
+   <div id="form">
+      <form onsubmit="return false;">
          <input id="input">
          <input type="submit" id="check" onclick="add()">
       </form>
